# Saola-Brain

./: index.html  package-lock.json  package.json  vite.config.ts
plans/: plan.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: http_server.rs  lib.rs  main.rs  notes.rs
src/components/: editor.tsx  sidebar.tsx  toolbar.tsx
src/store/: note-store.ts
